# rag-pipeline

./: .gitignore  README.md  pyproject.toml
qdrant_data/: meta.json
qdrant_data/collection/paul_graham/: storage.sqlite
rai_assignment/: pairwise_evaluation.ipynb  rag.ipynb  rag.py  rag1.ipynb  rag2.ipynb  utils.py
rai_assignment/qa_datasets/: evaluations_2.json  prediction_data_1.json  predictions.json  qa_dataset.json  qa_dataset_1.json  qa_dataset_2.json  rag_dataset.json  rag_dataset_1.json  rag_dataset_2.json  temp_pred.json  temp_qa.json
rai_assignment/qdrant_data/collection/paul_graham/: storage.sqlite
